# json-commander

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  json-commander-config.cmake.in
.github/workflows/: ci.yml
cmake/: json_commander_add_executable.cmake  json_commander_deps.cmake  json_commander_generate_codegen.cmake  json_commander_generate_completion.cmake  json_commander_generate_manpage.cmake  json_commander_main.cpp.in  json_commander_model_main.cpp.in
examples/fake-git/: fake-git.cpp
examples/greet/: greet.cpp
examples/greet-c/: greet-c.c
examples/serve/: CMakeLists.txt  serve_main.hpp
examples/serve-c/: serve-c.c
json_commander/: CMakeLists.txt  arg.hpp  cmd.hpp  completion.hpp  config.hpp.in  config_schema.hpp  conv.hpp  manpage.hpp  metaschema_data.hpp.in  model.hpp  model_emit.hpp  model_json.hpp  parse.hpp  run.hpp  schema_loader.hpp  validate.hpp
json_commander/schema/: json_commander.schema.json
json_commander_c/: json_commander.cpp  json_commander.h
json_commander_c_testing/: CMakeLists.txt  c_api_test.c
json_commander_testing/: CMakeLists.txt  arg_test.cpp  cmd_test.cpp  completion_test.cpp  config_schema_test.cpp  conv_test.cpp  manpage_test.cpp  metaschema_test.cpp  model_test.cpp  parse_test.cpp  run_test.cpp  schema_loader_test.cpp  validate_test.cpp
json_commander_wasm/: CMakeLists.txt  wasm_shim.cpp
json_commander_wasm/npm/: .gitignore  conformance.mjs  index.d.ts  index.js  package.json  test.mjs
tools/: CMakeLists.txt  json_commander.cpp  json_commander.json  json_commander_schema.hpp.in
